--- a/wzór10.html
+++ b/wzór10.html
@@ -281,17 +281,36 @@
         Beneficjenta określonymi w załączniku nr 3 do Umowy</li>
       <li>IZ zobowiązuje się powiadomić Beneficjenta o wszelkich zmianach Wytycznych, o których mowa w § 1 pkt 22).
         Powiadomienie następuje poprzez publikację komunikatu na stronie internetowej IZ.</li>
-      <li>4. Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy prawa
+      <li>Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy prawa
         unijnego i krajowego oraz aktualną treść Wytycznych , o których mowa w § 1 pkt 22).</li>
+      <li>W przypadku, gdy ogłoszona po podpisaniu niniejszej Umowy wersja Wytycznych, o których mowa w § 1 pkt 22 lit.
+        e) wprowadza rozwiązania korzystniejsze dla Beneficjenta, to na pisemny wniosek Beneficjenta, w sytuacji
+        wydatków poniesionych przed dniem stosowania nowej wersji dokumentu, IZ może stosować zasady korzystniejsze dla
+        Beneficjenta, o ile wydatki te nie zostały jeszcze zatwierdzone we wniosku o płatność.</li>
       <li>Beneficjent oświadcza, iż projekt na dzień podpisania umowy spełnia wszystkie kryteria, na podstawie których
         został wybrany do dofinansowania.</li>
-      <li>Beneficjent zobowiązany jest stosować zamieszczone na stronie internetowej <a
-          href="http://rpo.slaskie.pl/dokument/wzory_formularzy_i_dokumentow_niezbednych_do_realizacji_projektu_efs">http://rpo.slaskie.pl/dokument/wzory_formularzy_i_dokumentow_niezbednych_do_realizacji_projektu_efs</a>
-        aktualnie obowiązujące wzory formularzy i dokumentów niezbędnych do realizacji projektu oraz instrukcje
-        dotyczące sposobu ich wypełniania, w tym w szczególności:</li>
+      <li>Beneficjent oświadcza, że w chwili zawarcia niniejszej umowy, wydatki w projekcie zawierają podatek od towarów
+        i usług VAT, ponieważ Beneficjent oraz partnerzy, którą reprezentuje, a także partner/rzy (jeśli dotyczy) nie
+        ma/nie mają prawnej możliwości odzyskania podatku VAT zgodnie z przepisami ustawy z dnia 11 marca 2004 r. o
+        podatku od towarów i usług (Dz. U. z 2018 r., poz. 2174 z późn. zm.) oraz rozporządzeniami do tej ustawy.
+        Jednocześnie Beneficjent zobowiązuje się do zwrotu zrefundowanej ze środków unijnych w ramach projektu części
+        poniesionego VAT, jeżeli zaistnieją przesłanki umożliwiające odzyskanie tego podatku przez któregokolwiek z
+        partnerów projektu.<br /><br />
+        Beneficjent oświadcza, że część wydatków w projekcie zawiera podatek od towarów i usług VAT, ponieważ
+        instytucja, którą reprezentuje, a także partner/rzy (jeśli dotyczy) nie ma/nie mają prawnej możliwości
+        odzyskania podatku VAT od wszystkich kosztów wskazanych w budżecie projektu zgodnie z przepisami ustawy z dnia
+        11 marca 2004 r. o podatku od towarów i usług (Dz. U. z 2018 r., poz. 2174 z późn. zm.) oraz rozporządzeniami do
+        tej ustawy. Jednocześnie Beneficjent zobowiązuje się do zwrotu zrefundowanej ze środków unijnych w ramach
+        projektu części poniesionego VAT, jeżeli zaistnieją przesłanki umożliwiające odzyskanie tego podatku przez
+        któregokolwiek z partnerów projektu.<br /><br />
+        Beneficjent oświadcza, że wydatki w projekcie nie zawierają podatku od towarów i usług VAT, ponieważ instytucja,
+        którą reprezentuje, a także partner/rzy (jeśli dotyczy) ma/mają prawną możliwość odzyskania podatku VAT zgodnie
+        z przepisami ustawy z dnia 11 marca 2004 r. o podatku od towarów i usług (Dz. U. z 2018 r., poz. 2174 z późn.
+        zm.) oraz rozporządzeniami do tej ustawy. ten przypis pokazać zaraz przy 7.
+      </li>
     </ol>
   </ol>
-  <table>
+  <table style="font-size: 10px; font-family: Tahoma;">
     <tbody>
       <tr>
         <td width="15mm"></td>
