--- a/wzor_10_2.html
+++ b/wzor_10_2.html
@@ -70,33 +70,28 @@
   </div>
   <div style="text-align: justify;"></div>
   <div style="text-align: justify;">Strony umowy uzgadniają co następuje:</div>
-  <div style="text-align: justify;"></div><br>
-
+  <div style="text-align: justify;"></div>
+  <br />
   <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 1 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
   <div style="text-align: center;"><strong>Definicje</strong></div>
   <div style="text-align: justify;">
     <ol style="text-align: center; list-style: none;" type="none">
-      <li style="text-align: center">§ 1.</li>
+      <li style="text-align: center;">§ 1.</li>
     </ol>
   </div>
   <div style="text-align: justify;">Ilekroć w umowie jest mowa o:</div>
   <div style="text-align: justify;">
-    <ol type="none" style="list-style: none;">
+    <ol style="list-style: none;" type="none">
       <li>1) „beneficjencie pomocy” należy przez to rozumieć Beneficjenta pomocy w rozumieniu art. 2 pkt 16 ustawy z
-        dnia
-        30 kwietnia 2004 r. o postępowaniu w sprawach dotyczących pomocy publicznej;</li>
+        dnia 30 kwietnia 2004 r. o postępowaniu w sprawach dotyczących pomocy publicznej;</li>
       <li>2) „danych osobowych” oznacza to dane w rozumieniu art. 4 pkt 1) Rozporządzenia Parlamentu Europejskiego i
-        (UE)
-        2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych
+        (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych
         osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne
         rozporządzenie o ochronie danych), Dz. U. UE. L. 119 z 4 maja 2016 r. zwanego dalej „RODO”;</li>
-
-
       <li>3) „dniach roboczych” oznacza to dni z wyłączeniem sobót i dni ustawowo wolnych od pracy w rozumieniu ustawy z
         dnia 18 stycznia 1951 r. o dniach wolnych od pracy (t.j. Dz. U. z 2015 r. poz. 90).</li>
       <li>4) „dotacji celowej” oznacza to współfinansowanie krajowe z budżetu państwa na dofinansowanie projektu o
-        którym
-        mowa w art. 2 pkt 30 Ustawy wdrożeniowej;</li>
+        którym mowa w art. 2 pkt 30 Ustawy wdrożeniowej;</li>
       <li>5) „Instytucji Zarządzającej” oznacza to Zarząd Województwa Śląskiego pełniący rolę Instytucji Zarządzającej
         Regionalnym Programem Operacyjnym Województwa Śląskiego na lata 2014-2020;</li>
       <li>6) „LSI” oznacza to Lokalny System Informatyczny, dostępny pod adresem https://lsi.slaskie.pl;</li>
@@ -110,33 +105,28 @@
       <li>10) „partnerze wiodącym” należy przez to rozumieć, w przypadku projektu realizowanego w partnerstwie, podmiot
         (Beneficjenta), z którym IZ podpisuje umowę o dofinansowanie projektu;</li>
       <li>11) „płatności ze środków europejskich” oznacza to współfinansowanie pochodzące ze środków europejskich w
-        części
-        dotyczącej Europejskiego Funduszu Społecznego, przekazywanej Beneficjentowi przez Bank Gospodarstwa Krajowego na
-        podstawie zlecenia płatności wystawionego przez IZ, o którym mowa w art. 2 pkt 31 lit. a Ustawy wdrożeniowej;
-      </li>
+        części dotyczącej Europejskiego Funduszu Społecznego, przekazywanej Beneficjentowi przez Bank Gospodarstwa
+        Krajowego na podstawie zlecenia płatności wystawionego przez IZ, o którym mowa w art. 2 pkt 31 lit. a Ustawy
+        wdrożeniowej;</li>
       <li>12) „programie” oznacza to Regionalny Program Operacyjny Województwa Śląskiego na lata 2014-2020 uchwalony
-        przez
-        Zarząd Województwa Śląskiego i przyjęty przez Komisję Europejską;</li>
+        przez Zarząd Województwa Śląskiego i przyjęty przez Komisję Europejską;</li>
       <li>13) „projekcie” oznacza to projekt realizowany w ramach wniosku o dofinansowanie projektu nr
         <strong>{$dane_z_projects.pelnyNrProjektu}</strong> wraz z późniejszymi zmianami, stanowiącym załącznik nr 1 do
         umowy;</li>
       <li>14) „przetwarzaniu danych osobowych”<a href="#_ftn5" name="_ftnref5"><span><span>[5]</span></span></a>
-        wszelkie
-        operacje lub zestaw operacji wykonywanych na danych osobowych lub zestawach danych osobowych;</li>
-      <li>15) „rachunku płatniczym transferowym” należy przez to rozumieć rachunek Beneficjenta,na
-        który trafia kwota dofinansowania projektu i z którego niezwłocznie jest przekazywana na wyodrębniony dla
-        projektu rachunek danej jednostki organizacyjnej;</em></li>
+        wszelkie operacje lub zestaw operacji wykonywanych na danych osobowych lub zestawach danych osobowych;</li>
+      <li>15) „rachunku płatniczym transferowym” należy przez to rozumieć rachunek Beneficjenta,na który trafia kwota
+        dofinansowania projektu i z którego niezwłocznie jest przekazywana na wyodrębniony dla projektu rachunek danej
+        jednostki organizacyjnej;</li>
       <li>16) „rachunku IZ” <em>należy przez to rozumieć </em>rachunek płatniczy IZ udostępniony na stronie internetowej
         www.rpo.slaskie.pl właściwy dla danej Osi Priorytetowej, w ramach której jest realizowany projekt;</li>
       <li>17) „realizatorze projektu” należy przez to rozumieć jednostkę organizacyjną Beneficjenta i/lub Partnera
-        projektu
-        realizującą projekt w imieniu i na rzecz Beneficjenta wskazaną we wniosku;</li>
+        projektu realizującą projekt w imieniu i na rzecz Beneficjenta wskazaną we wniosku;</li>
       <li>18) „SzOOP” należy przez to rozumieć Szczegółowy Opis Osi Priorytetowych Regionalnego Programu Operacyjnego
         Województwa Śląskiego na lata 2014-2020 (wraz z wykazem dokumentów obowiązujących w Programie) z późn.zm.;</li>
       <li>19) „wniosku o dofinansowanie projektu” oznacza to dokument przedkładany przez Wnioskodawcę do IZ w celu
-        uzyskania
-        środków finansowych na realizację projektu w ramach RPO WSL, zwany dalej „wnioskiem”, stanowiącym załącznik nr 1
-        do umowy wraz z późniejszymi zamianami;</li>
+        uzyskania środków finansowych na realizację projektu w ramach RPO WSL, zwany dalej „wnioskiem”, stanowiącym
+        załącznik nr 1 do umowy wraz z późniejszymi zamianami;</li>
       <li>20) „wydatkach kwalifikowalnych” należy przez to rozumieć wydatki lub koszty uznane za kwalifikowalne i
         spełniające kryteria, zgodnie z rozporządzeniem ogólnym, rozporządzeniem Parlamentu Europejskiego i Rady (UE)
         1301/2013, jak również w rozumieniu ustawy i przepisów rozporządzeń wydanych do ustawy wdrożeniowej, oraz
@@ -144,8 +134,7 @@
         Regionalnego, Europejskiego Funduszu Społecznego oraz Funduszu Spójności w okresie programowania 2014-2020”;
       </li>
       <li>21) „wydatkach niekwalifikowalnych” należy przez to rozumieć każdy wydatek lub koszt poniesiony, który nie
-        jest
-        wydatkiem kwalifikowalnym, tj. nie spełnia warunków kwalifikowalności wymienionych w „Wytycznych w zakresie
+        jest wydatkiem kwalifikowalnym, tj. nie spełnia warunków kwalifikowalności wymienionych w „Wytycznych w zakresie
         kwalifikowalności wydatków w ramach Europejskiego Funduszu Rozwoju Regionalnego, Europejskiego Funduszu
         Społecznego oraz Funduszu Spójności na lata 2014-2020”;</li>
       <li>22) „wytycznych” należy przez to rozumieć instrumenty prawne wydawane przez ministra właściwego ds. rozwoju
@@ -153,12 +142,10 @@
         na podstawie art. 5 ust. 1 ustawy z dnia 11 lipca 2014 r. o zasadach realizacji programów w zakresie polityki
         spójności finansowanych w perspektywie finansowej 2014–2020 tj. w szczególności<a href="#_ftn6"
           name="_ftnref6"><span><span>[6]</span></span></a>:</li>
-
       <ol type="a">
         <li>Wytyczne w zakresie realizacji zasady równości szans i niedyskryminacji, w tym dostępności dla osób z
           niepełnosprawnościami oraz zasady równości szans kobiet i mężczyzn w ramach funduszy unijnych na lata
-          2014-2020;
-        </li>
+          2014-2020;</li>
         <li>Wytyczne w zakresie sprawozdawczości na lata 2014-2020;</li>
         <li>Wytyczne w zakresie informacji i promocji programów operacyjnych polityki spójności na lata 2014-2020;</li>
         <li>Wytyczne w zakresie monitorowania postępu rzeczowego realizacji programów operacyjnych na lata 2014-2020;
@@ -173,52 +160,42 @@
         <li>Wytyczne w zakresie sposobu korygowania i odzyskiwania nieprawidłowych wydatków oraz raportowania
           nieprawidłowości w ramach programów operacyjnych polityki spójności na lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji przedsięwzięć z udziałem środków Europejskiego Funduszu Społecznego w
-          obszarze
-          edukacji na lata 2014-2020;</li>
+          obszarze edukacji na lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji przedsięwzięć z udziałem środków Europejskiego Funduszu Społecznego w
-          obszarze
-          rynku pracy na lata 2014-2020;</li>
+          obszarze rynku pracy na lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji przedsięwzięć w obszarze włączenia społecznego i zwalczania ubóstwa z
           wykorzystaniem środków Europejskiego Funduszu Społecznego i Europejskiego Funduszu Rozwoju Regionalnego na
-          lata
-          2014-2020;</li>
+          lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji przedsięwzięć z udziałem środków Europejskiego Funduszu Społecznego w
-          obszarze
-          zdrowia na lata 2014-2020;</li>
+          obszarze zdrowia na lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji przedsięwzięć z udziałem środków Europejskiego Funduszu Społecznego w
-          obszarze
-          przystosowania przedsiębiorców i pracowników do zmian na lata 2014-2020;</li>
+          obszarze przystosowania przedsiębiorców i pracowników do zmian na lata 2014-2020;</li>
         <li>Wytyczne w zakresie realizacji projektów finansowanych ze środków Funduszu Pracy w ramach programów
           operacyjnych współfinansowanych z Europejskiego Funduszu Społecznego na lata 2014-2020;</li>
       </ol>
-
       <li>23) „Wskaźniki horyzontalne” są to wskaźniki, o których mowa w Wytycznych w zakresie monitorowania postępu
         rzeczowego realizacji programów operacyjnych na lata 2014 – 2020<a href="#_ftn7"
           name="_ftnref7"><span><span>[7]</span></span></a>.</li>
     </ol>
   </div>
   <div style="text-align: justify;"></div>
-  <div style="text-align: justify;"></div>
-  <div style="text-align: justify;"></div>
-
 
   <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 2 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
   <div style="text-align: center;"><strong> Przedmiot umowy</strong></div>
   <div style="text-align: justify;">
     <ol style="text-align: center; list-style: none;" type="none">
-      <li style="text-align: center">§ 2.</li>
+      <li style="text-align: center;">§ 2.</li>
     </ol>
     <ol>
       <li>Na warunkach określonych w niniejszej umowie, IZ przyznaje Beneficjentowi dofinansowanie na realizację
         Projektu w łącznej kwocie nieprzekraczającej <strong>{Funkcje::formatLiczba($wnd_wybrane.wnioskowane_dof)} PLN
-          (słownie: {Funkcje::liczbaSlownie($wnd_wybrane.wnioskowane_dof)})</strong> i stanowiącej
-        nie więcej niż <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_dof)} %</strong> całkowitych wydatków
-        kwalifikowalnych Projektu, w tym:</li>
+          (słownie: {Funkcje::liczbaSlownie($wnd_wybrane.wnioskowane_dof)})</strong> i stanowiącej nie więcej niż
+        <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_dof)} %</strong> całkowitych wydatków kwalifikowalnych
+        Projektu, w tym:</li>
     </ol>
     <ol type="none">
       <li>1) płatność ze środków europejskich w kwocie <strong>{Funkcje::formatLiczba($wnd_wybrane.wklad_ue)} PLN
-          (słownie:
-          {Funkcje::liczbaSlownie($wnd_wybrane.wklad_ue)})</strong>, co stanowi
+          (słownie: {Funkcje::liczbaSlownie($wnd_wybrane.wklad_ue)})</strong>, co stanowi
         <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_ue)} %</strong> całkowitych wydatków kwalifikowalnych
         Projektu;</li>
       <li>2) dotację celową z budżetu krajowego w kwocie <strong>{Funkcje::liczbaSlownie($wnd_wybrane.wklad_dc)} PLN
@@ -229,20 +206,19 @@
     <ol start="2">
       <li>Beneficjent zobowiązuje się do rozliczenia każdego wydatku w ramach dofinansowania zgodnie z powyższym
         montażem finansowym. Beneficjent zobowiązuje się do wniesienia wkładu własnego w wysokości
-        <strong>{Funkcje::formatLiczba($wnd_wybrane.wklad_wlasny)} PLN
-          (słownie: {Funkcje::liczbaSlownie($wnd_wybrane.wklad_wlasny)})</strong>, co stanowi
-        <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_wklad_wlasny)} %</strong> wydatków kwalifikowalnych
-        projektu.
+        <strong>{Funkcje::formatLiczba($wnd_wybrane.wklad_wlasny)} PLN (słownie:
+          {Funkcje::liczbaSlownie($wnd_wybrane.wklad_wlasny)})</strong>, co stanowi
+        <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_wklad_wlasny)} %</strong> wydatków kwalifikowalnych projektu.
       </li>
     </ol>
   </div>
   <div style="text-align: justify;">W przypadku niewniesienia wkładu własnego w ww. kwocie, IZ może kwotę przyznanego
     dofinansowania, o której mowa w ust. 1 proporcjonalnie obniżyć, z zachowaniem udziału procentowego określonego w
     ust.1. Wkład własny, który zostanie rozliczony w wysokości przekraczającej
-    <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_wklad_wlasny)} %</strong> wydatków projektu
-    jest niekwalifikowalny.<a href="#_ftn9" name="_ftnref9"><span><span>[9]</span></span></a> W projekcie nie ma
-    możliwości wniesienia wkładu własnego w ramach kosztów pośrednich, o których mowa <br /> w § 5 ust. 1.<a
-      href="#_ftn10" name="_ftnref10"><span><span>[10]</span></span></a></div>
+    <strong>{Funkcje::formatLiczba($wnd_wybrane.poziom_wklad_wlasny)} %</strong> wydatków projektu jest
+    niekwalifikowalny.<a href="#_ftn9" name="_ftnref9"><span><span>[9]</span></span></a> W projekcie nie ma możliwości
+    wniesienia wkładu własnego w ramach kosztów pośrednich, o których mowa <br /> w § 5 ust. 1.<a href="#_ftn10"
+      name="_ftnref10"><span><span>[10]</span></span></a></div>
   <div style="text-align: justify;">
     <ol start="3">
       <li>Beneficjent zobowiązuje się do rozliczenia projektu, zgodnie z montażem finansowym przedstawionym w ust. 1
@@ -251,26 +227,51 @@
       <li>Całkowita wartość Projektu wynosi <strong>{Funkcje::formatLiczba($wnd_wybrane.wartosc_projektu)} PLN
           (słownie:{Funkcje::liczbaSlownie($wnd_wybrane.wartosc_projektu)})</strong>.</li>
     </ol>
-    <ul>
-      <li><strong></strong></li>
-    </ul>
+    <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 3 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <ol style="text-align: center; list-style: none;" type="none">
+      <li style="text-align: center;">§ 3.</li>
+    </ol>
     <ol>
       <li>Beneficjent zobowiązuje się do osiągnięcia następujących wskaźników produktu na zakończenie realizacji
         projektu:</li>
     </ol>
-    <ul>
-      <li><strong> </strong><strong>nazwa wskaźnika……………………..wartość docelowa ………………………………..,</strong></li>
-      <li><strong> </strong><strong>nazwa wskaźnika……………………..wartość docelowa ………………………………..,</strong></li>
-      <li><strong>nazwa wskaźnika……………………..wartość docelowa …………………………………</strong></li>
-    </ul>
+    <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;">
+      <tbody>
+        <tr>
+          <td width="10mm"></td>
+          <td width="8mm"><strong>{foreach $wskazniki_prod as $rekord} {$rekord@iteration})</strong></td>
+          <td width="160mm"><strong>{$rekord.nazwa_wsk_prod},wartość dolelowa:{foreach $wskazniki_prod as $rekord}
+              {$rekord.wsk_prod_docelowa}</strong></td>
+        </tr>
+      </tbody>
+    </table>
+
     <ol start="2">
       <li>Beneficjent zobowiązuje się do osiągnięcia następujących wskaźników rezultatu:</li>
     </ol>
+
+
+    <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;">
+      <tbody>
+        <tr>
+          <td width="10mm"></td>
+          <td width="8mm"><strong>{foreach $wskazniki_rez as $rekord} {$rekord@iteration})</strong></td>
+          <td width="160mm"><strong>{$rekord.nazwa_wsk_rez},wartość dolelowa:{foreach $wskazniki_rez as $rekord}
+              {$rekord.wsk_rez_docelowa}</strong></td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
     <ul>
       <li><strong> </strong><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ………., </strong></li>
       <li><strong> </strong><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ………., </strong></li>
       <li><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ……….,</strong></li>
     </ul>
+
+
+
     <ol start="3">
       <li>Beneficjent zobowiązuje się do monitorowania oraz przekazywania do IZ informacji zgodnie z obowiązującym
         wnioskiem o dofinansowanie o poziomie wskaźników horyzontalnych (1-4) i wskaźników informacyjnych służących do
