--- a/wzor_10_2.html
+++ b/wzor_10_2.html
@@ -179,7 +179,6 @@
     </ol>
   </div>
   <div style="text-align: justify;"></div>
-
   <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 2 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
   <div style="text-align: center;"><strong> Przedmiot umowy</strong></div>
   <div style="text-align: justify;">
@@ -245,12 +244,9 @@
         </tr>
       </tbody>
     </table>
-
     <ol start="2">
       <li>Beneficjent zobowiązuje się do osiągnięcia następujących wskaźników rezultatu:</li>
     </ol>
-
-
     <table style="text-align: justify; font-size: 12px; line-height: 1.5; font-family: Tahoma;">
       <tbody>
         <tr>
@@ -261,29 +257,20 @@
         </tr>
       </tbody>
     </table>
-
-
-
-    <ul>
-      <li><strong> </strong><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ………., </strong></li>
-      <li><strong> </strong><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ………., </strong></li>
-      <li><strong>nazwa wskaźnika ……………………….……………………, wartość docelowa ……….,</strong></li>
-    </ul>
-
-
-
     <ol start="3">
       <li>Beneficjent zobowiązuje się do monitorowania oraz przekazywania do IZ informacji zgodnie z obowiązującym
         wnioskiem o dofinansowanie o poziomie wskaźników horyzontalnych (1-4) i wskaźników informacyjnych służących do
         monitorowania rzeczowego<a href="#_ftn11" name="_ftnref11"><span><span>[11]</span></span></a>:</li>
     </ol>
-    <ul>
-      <li><strong>nazwa wskaźnika horyzontalnego;</strong></li>
-      <li><strong>nazwa wskaźnika horyzontalnego;</strong></li>
-      <li><strong>nazwa wskaźnika horyzontalnego;</strong></li>
-      <li><strong>nazwa wskaźnika horyzontalnego;</strong></li>
-      <li><strong>nazwa wskaźnika służącego do monitorowania postępu rzeczowego.</strong></li>
-    </ul>
+    <ol style="list-style: none;" type="none">
+      <li><strong>1) Liczba obiektów dostosowanych do potrzeb osób z niepełnosprawnościami;</strong></li>
+      <li><strong>2) Liczba projektów, w których sfinansowano koszty racjonalnych usprawnień dla osób z
+          niepełnosprawnościami;</strong></li>
+      <li><strong>3) Liczba osób objętych szkoleniami / doradztwem w zakresie kompetencji cyfrowych;</strong></li>
+      <li><strong>4) Liczba podmiotów wykorzystujących technologie informacyjno-komunikacyjne;</strong></li>
+      <li><strong>{$pole_10}</strong></li>
+      <li><strong>{$pole_11}</strong></li>
+    </ol>
     <ol start="4">
       <li>Beneficjent zobowiązuje się do realizacji projektu w zakresie określonym i zatwierdzonym we wniosku, w sposób,
         który zapewni osiągnięcie i utrzymanie wskazanych tam celów, w tym wskaźników produktu i rezultatu zakładanych
@@ -293,56 +280,36 @@
     </ol>
   </div>
   <div style="text-align: justify;"></div>
-  <div style="text-align: justify;"><strong>Oświadczenia</strong></div>
+  <div style="text-align: center;"><strong>Oświadczenia</strong></div>
   <div style="text-align: justify;">
-    <ul>
-      <li>
-        <ol>
-          <li>Beneficjent zobowiązuje się do realizacji projektu z należytą starannością, w szczególności ponosząc
-            wydatki celowo, rzetelnie, racjonalnie i oszczędnie z zachowaniem zasady uzyskiwania najlepszych efektów,
-            zgodnie z obowiązującymi regułami, zasadami i postanowieniami wynikającymi z programu, uszczegółowienia,
-            obowiązujących procedur, wytycznych oraz właściwych przepisów prawa krajowego oraz prawa unijnego.</li>
-          <li>Beneficjent oświadcza, że zapoznał się z treścią Wytycznych, o których mowa w § 1 pkt 22) oraz zapisami
-            SzOOP i zobowiązuje się do realizacji projektu zgodnie z ich zapisami, w tym ze szczegółowymi obowiązkami
-            Beneficjenta określonymi w załączniku nr 3 do Umowy.</li>
-          <li>IZ zobowiązuje się powiadomić Beneficjenta o wszelkich zmianach Wytycznych, o których mowa w § 1 pkt 22).
-            Powiadomienie następuje poprzez publikację komunikatu na stronie internetowej IZ.</li>
-          <li>Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy
-            prawa unijnego i krajowego oraz aktualną treść Wytycznych<a href="#_ftn12"
-              name="_ftnref12"><span><span>[12]</span></span></a>, o których mowa w 1 pkt 22).</li>
-          <li>W przypadku, gdy ogłoszona po podpisaniu niniejszej Umowy wersja Wytycznych, o których mowa w § 1 pkt 22
-            lit. e) wprowadza rozwiązania korzystniejsze dla Beneficjenta, to na pisemny wniosek Beneficjenta, w
-            sytuacji wydatków poniesionych przed dniem stosowania nowej wersji dokumentu, IZ może stosować zasady
-            korzystniejsze dla Beneficjenta, o ile wydatki te nie zostały jeszcze zatwierdzone we wniosku o płatność.
-          </li>
-          <li>Beneficjent oświadcza, iż projekt na dzień podpisania umowy spełnia wszystkie kryteria, na podstawie
-            których został wybrany do dofinansowania.</li>
-          <li><a href="#_ftn13" name="_ftnref13"><sup><sup>[13]</sup></sup></a> Beneficjent oświadcza, że w chwili
-            zawarcia niniejszej umowy, wydatki w projekcie zawierają podatek od towarów i usług VAT, ponieważ
-            Beneficjent oraz partnerzy, którą reprezentuje, a także partner/rzy (jeśli dotyczy) nie ma/nie mają prawnej
-            możliwości odzyskania podatku VAT zgodnie z przepisami ustawy z dnia 11 marca 2004 r. o podatku od towarów i
-            usług (Dz. U. z 2018 r., poz. 2174 z późn. zm.) oraz rozporządzeniami do tej ustawy. Jednocześnie
-            Beneficjent zobowiązuje się do zwrotu zrefundowanej ze środków unijnych w ramach projektu części
-            poniesionego VAT, jeżeli zaistnieją przesłanki umożliwiające odzyskanie tego podatku przez któregokolwiek z
-            partnerów projektu.</li>
-        </ol>
-      </li>
-    </ul>
+    <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! PARAGRAF 3 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <ol style="text-align: center; list-style: none;" type="none">
+      <li style="text-align: center;">§ 4.</li>
+    </ol>
+    <ol>
+      <li>Beneficjent zobowiązuje się do realizacji projektu z należytą starannością, w szczególności ponosząc wydatki
+        celowo, rzetelnie, racjonalnie i oszczędnie z zachowaniem zasady uzyskiwania najlepszych efektów, zgodnie z
+        obowiązującymi regułami, zasadami i postanowieniami wynikającymi z programu, uszczegółowienia, obowiązujących
+        procedur, wytycznych oraz właściwych przepisów prawa krajowego oraz prawa unijnego.</li>
+      <li>Beneficjent oświadcza, że zapoznał się z treścią Wytycznych, o których mowa w § 1 pkt 22) oraz zapisami SzOOP
+        i zobowiązuje się do realizacji projektu zgodnie z ich zapisami, w tym ze szczegółowymi obowiązkami Beneficjenta
+        określonymi w załączniku nr 3 do Umowy.</li>
+      <li>IZ zobowiązuje się powiadomić Beneficjenta o wszelkich zmianach Wytycznych, o których mowa w § 1 pkt 22).
+        Powiadomienie następuje poprzez publikację komunikatu na stronie internetowej IZ.</li>
+      <li>Przy wydatkowaniu środków przyznanych w ramach projektu Beneficjent zobowiązuje się stosować przepisy prawa
+        unijnego i krajowego oraz aktualną treść Wytycznych<a href="#_ftn12"
+          name="_ftnref12"><span><span>[12]</span></span></a>, o których mowa w 1 pkt 22).</li>
+      <li>W przypadku, gdy ogłoszona po podpisaniu niniejszej Umowy wersja Wytycznych, o których mowa w § 1 pkt 22 lit.
+        e) wprowadza rozwiązania korzystniejsze dla Beneficjenta, to na pisemny wniosek Beneficjenta, w sytuacji
+        wydatków poniesionych przed dniem stosowania nowej wersji dokumentu, IZ może stosować zasady korzystniejsze dla
+        Beneficjenta, o ile wydatki te nie zostały jeszcze zatwierdzone we wniosku o płatność.</li>
+      <li>Beneficjent oświadcza, iż projekt na dzień podpisania umowy spełnia wszystkie kryteria, na podstawie których
+        został wybrany do dofinansowania.</li>
+      <li><a href="#_ftn13" name="_ftnref13"><sup><sup>[13]</sup></sup></a> {$pole_12}</li>
+    </ol>
   </div>
-  <div style="text-align: justify;">Beneficjent oświadcza, że część wydatków w projekcie zawiera podatek od towarów i
-    usług VAT, ponieważ instytucja, którą reprezentuje, a także partner/rzy (jeśli dotyczy) nie ma/nie mają prawnej
-    możliwości odzyskania podatku VAT od wszystkich kosztów wskazanych w budżecie projektu zgodnie z przepisami ustawy z
-    dnia 11 marca 2004 r. o podatku od towarów i usług (Dz. U. z 2018 r., poz. 2174 z późn. zm.) oraz rozporządzeniami
-    do tej ustawy. Jednocześnie Beneficjent zobowiązuje się do zwrotu zrefundowanej ze środków unijnych w ramach
-    projektu części poniesionego VAT, jeżeli zaistnieją przesłanki umożliwiające odzyskanie tego podatku przez
-    któregokolwiek z partnerów projektu.</div>
-  <div style="text-align: justify;">Beneficjent oświadcza, że wydatki w projekcie nie zawierają podatku od towarów i
-    usług VAT, ponieważ instytucja, którą reprezentuje, a także partner/rzy (jeśli dotyczy) ma/mają prawną możliwość
-    odzyskania podatku VAT zgodnie z przepisami ustawy z dnia 11 marca 2004 r. o podatku od towarów i usług (Dz. U. z
-    2018 r., poz. 2174 z późn. zm.) oraz rozporządzeniami do tej ustawy.<sup> </sup>ten przypis pokazać zaraz przy 7.
-  </div>
-  <div style="text-align: justify;">
-    <ol start="8">
+  <div style="text-align: justify; margin-bottom: 0;">
+    <ol start="8" style="text-align: justify; margin-bottom: 0;">
       <li>Beneficjent oraz Partnerzy projektu zobowiązani są do udostępniania dokumentacji finansowo-księgowej oraz
         udzielania uprawnionym organom kontrolnym informacji umożliwiających weryfikację kwalifikowalności podatku VAT
         pod rygorem zwrotu zrefundowanej ze środków unijnych w ramach projektu części poniesionego VAT, jeżeli
@@ -363,19 +330,24 @@
         dotyczące sposobu ich wypełniania, w tym w szczególności:</li>
     </ol>
   </div>
-  <div style="text-align: justify;">1) Formularz przekazywania informacji,</div>
-  <div style="text-align: justify;">2) Wymagania dotyczące wyodrębnionej ewidencji księgowej.</div>
-  <div style="text-align: justify;"><strong> </strong></div>
+
+  <ol type="none" style="margin-top: 0;">
+    <li>
+      <div>1) Formularz przekazywania informacji,</div>
+      <div>2) Wymagania dotyczące wyodrębnionej ewidencji księgowej.</div>
+    </li>
+  </ol>
   <div style="text-align: justify;">
-    <ul>
-      <li></li>
-    </ul>
+    <ol style="text-align: center; list-style: none;" type="none">
+      <li style="text-align: center;">§ 5.</li>
+    </ol>
   </div>
   <div style="text-align: justify;"><strong> </strong></div>
   <div style="text-align: justify;">
     <ol>
       <li>Koszty pośrednie projektu rozliczane stawką ryczałtową zdefiniowane w Wytycznych, o których mowa w § 1 pkt 22)
-        lit. e, stanowią <strong>………%</strong> poniesionych, udokumentowanych i zatwierdzonych w ramach projektu
+        lit. e, stanowią <strong>{Funkcje::formatLiczba($wnd_wybrane.koszty_posrednie_stawka),0}%</strong> poniesionych,
+        udokumentowanych i zatwierdzonych w ramach projektu
         wydatków bezpośrednich. Po otrzymaniu transzy dofinansowania, wynikającej z harmonogramu płatności, Beneficjent
         może dokonać przelewu środków na rachunek płatniczy, z którego ponosi wydatki zgodnie z katalogiem kosztów
         pośrednich, do wysokości procentu wynikającego z zapisów Umowy o dofinansowanie.<a href="#_ftn14"
